--- a/api-reference/endpoint/meta/campaign/phone_call.mdx
+++ b/api-reference/endpoint/meta/campaign/phone_call.mdx
@@ -15,7 +15,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 
 <CampaignTargeting />
 
-### Non Dynamic Ads Parameters
+### Call Ads Parameters
 
 <ParamField body="campaignType" type="string" required>
 	For Phone Call Goal, campaignType is `LEAD_GENERATION`
