Update pixelId descriptions in campaign documentation to include a link for obtaining the Facebook Pixel ID, enhancing clarity and user guidance.

--- a/api-reference/endpoint/meta/campaign/conversion_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/conversion_dynamic.mdx
@@ -22,7 +22,8 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="pixelId" type="string" required>
-	Facebook Pixel ID for conversion tracking
+	Facebook Pixel ID for conversion tracking, you can get the pixel id from
+	[here](/api-reference/endpoint/meta/get_pixels_list)
 </ParamField>
 
 <ParamField body="conversionGoal" type="string" required>
