--- a/api-reference/endpoint/meta/campaign/conversion_standard.mdx
+++ b/api-reference/endpoint/meta/campaign/conversion_standard.mdx
@@ -22,7 +22,8 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="pixelId" type="string" required>
-	Facebook Pixel ID for conversion tracking
+	Facebook Pixel ID for conversion tracking, you can get the pixel id from
+	[here](/api-reference/endpoint/meta/get_pixels_list)
 </ParamField>
 
 <ParamField body="conversionGoal" type="string" required>
