--- a/api-reference/endpoint/meta/get_custom_conversions.mdx
+++ b/api-reference/endpoint/meta/get_custom_conversions.mdx
@@ -13,7 +13,8 @@ description: "Get custom conversions for a campaign"
 	page](/api-reference/endpoint/auth/get_profile).
 </ParamField>
 <ParamField body="pixelId" type="string" required>
-	Facebook Pixel ID
+	Facebook Pixel ID, you can get the pixel id from
+	[here](/api-reference/endpoint/meta/get_pixels_list)
 </ParamField>
 <ParamField body="campaignType" type="string" required>
 	Campaign Type, Supported values are: `CONVERSIONS`, `OUTCOME_SALES`
