--- a/api-reference/endpoint/meta/create_traffic_campaign.mdx
+++ b/api-reference/endpoint/meta/create_traffic_campaign.mdx
@@ -96,13 +96,17 @@ playground: "none"
 
 </ParamField>
 
-<ParamField body="headline1" type="object[]">
+<ParamField body="headlines" type="object[]">
 	<Expandable title="Headline Variations Array">
 		<ParamField body="text" type="string" required>
 			Headline text variation
 		</ParamField>
 	</Expandable>
-
+	<Warning>
+		Headline max length is 255 characters. however, for non-English
+		languages, the limit is determined by the number of bytes rather than
+		the number of visible characters
+	</Warning>
 </ParamField>
 
 <ParamField body="callToAction" type="string" required>
@@ -119,6 +123,10 @@ playground: "none"
 ### Non Dynamic Ads Parameters
 
 <ParamField body="carousel" type="object[]">
+	<Warning>
+		- Atleast 2 carousel items are required.
+		- Maximum 10 carousel items are allowed.
+	</Warning>
 	<Expandable title="Carousel Array">
 		<ParamField body="name" type="string" required>
 			Carousel Name
@@ -150,7 +158,10 @@ playground: "none"
 </ParamField>
 
 <ParamField body="multipleCreatives" type="object[]">
-
+	<Warning>
+		- Atleast 1 creative is required.
+		- Maximum 10 creatives are allowed.
+	</Warning>
     <Expandable title="Multiple Creative Configuration">
     	<ParamField body="url" type="string" required>
     		Destination URL
@@ -160,12 +171,17 @@ playground: "none"
     		Call to Action
     	</ParamField>
 
-    	<ParamField body="headline1" type="string">
+    	<ParamField body="headlines" type="string">
     		Headline
+    		<Warning>Headline max length is 255 characters. however, for non-English languages, the limit is determined by the number of bytes rather than the number of visible characters</Warning>
     	</ParamField>
 
     	<ParamField body="image" type="string">
     		Image URL
+    		<Warning>
+    			- Minimum Image Size: 400x400px
+    			- Supported Aspect Ratios: 1:1, 16:9, 9:16
+    		</Warning>
     	</ParamField>
 
     	<ParamField body="video" type="object">
@@ -179,24 +195,6 @@ playground: "none"
     		</Expandable>
     	</ParamField>
 
-    	{/* <ParamField body="phoneNumber" type="string">
-    		Phone Number (for Call Ads)
-    	</ParamField>
-
-    	<ParamField
-    		body="greetingText"
-    		type="string"
-    	>
-    		Greeting Text
-    	</ParamField>
-
-    	<ParamField body="conversations" type="object[]">
-    		<Expandable title="Conversations Array">
-    			<ParamField body="title" type="string" required>
-    				Conversation Title
-    			</ParamField>
-    		</Expandable>
-    	</ParamField> */}
 
     </Expandable>
 
