Enhance campaign documentation by adding warnings for lead form ID retrieval, clarifying source ID requirements for lookalike audiences, and improving image specifications for dynamic ads. Remove deprecated parameters and streamline content for better user guidance.

--- a/api-reference/endpoint/meta/campaign/awareness_dynamic.mdx
+++ b/api-reference/endpoint/meta/campaign/awareness_dynamic.mdx
@@ -34,6 +34,9 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
 </ParamField>
 
 <ParamField body="images" type="object[]">
+	<Warning>
+		Images are only supported for optimization goal `REACH`.
+	</Warning>
 	<Note>
 		You can add up to 10 total images and videos in one dynamic ad, atlease 1 image is required if video is not provided.
 		- Minimum Image Size: 400x400px
