--- a/api-reference/endpoint/meta/get_targeting_systems_lookup.mdx
+++ b/api-reference/endpoint/meta/get_targeting_systems_lookup.mdx
@@ -103,7 +103,7 @@ description: "This endpoint is used to get device targeting lookup, like os and 
 </Tabs>
 
 <ResponseExample>
-    ```json 200 (DEVICE Type)
+    ```json 200 (OS Type)
     {
         "success": true,
         "results": {
