--- a/snippets/create_campaign_targeting.mdx
+++ b/snippets/create_campaign_targeting.mdx
@@ -201,7 +201,7 @@
 </ParamField>
 
 <ParamField body="userOS" type="string[]">
-	Operating system targeting, you have to send the os name in string array,
-	you can get the list of operating systems from
+	Operating system targeting, you have to send the os platform in string
+	array, you can get the list of operating systems from
 	[here](/api-reference/endpoint/meta/get_targeting_systems_lookup)
 </ParamField>
