--- a/api-reference/endpoint/meta/create_traffic_campaign.mdx
+++ b/api-reference/endpoint/meta/create_traffic_campaign.mdx
@@ -147,16 +147,6 @@ playground: "none"
 
 </ParamField>
 
-<ParamField body="isDynamicCreative" type="boolean" >
-	Whether it's dynamic creative, useable with images/videos
-
-    <Note>
-    	Use `isDynamicCreative` = `false`, to create multiple standard
-    	`non-dynamic` ads in a single AdSet.
-    </Note>
-
-</ParamField>
-
 <ParamField body="multipleCreatives" type="object[]">
 	<Warning>
 		- Atleast 1 creative is required.
@@ -388,6 +378,11 @@ playground: "none"
 				<ResponseField name="leadFormId" type="string">
 					The unique identifier for the lead form associated with this
 					campaign.
+					<Warning>
+						You can get the lead form id from [get lead
+						forms](/api-reference/endpoint/meta/get_lead_forms)
+						endpoint.
+					</Warning>
 				</ResponseField>
 				<ResponseField name="campaignId" type="string">
 					The unique identifier for the campaign.
