Update phone number parameter descriptions in campaign documentation to include example format for clarity and improved user guidance.

--- a/api-reference/endpoint/meta/campaign/engagement.mdx
+++ b/api-reference/endpoint/meta/campaign/engagement.mdx
@@ -45,7 +45,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     	</ParamField>
 
     	<ParamField body="phoneNumber" type="string" >
-    		Phone Number
+    		Phone Number, e.g: +13434343434
     	</ParamField>
 
     	<ParamField body="image" type="string">
