--- a/api-reference/endpoint/meta/campaign/phone_call.mdx
+++ b/api-reference/endpoint/meta/campaign/phone_call.mdx
@@ -41,7 +41,7 @@ import CampaignResponse from "/snippets/create_campaign_response.mdx";
     	</ParamField>
 
     	<ParamField body="phoneNumber" type="string" required>
-    		Phone Number
+    		Phone Number, e.g: +13434343434
     	</ParamField>
 
     	<ParamField body="image" type="string">
